parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> functionlist block
Rule 2     functionlist -> function functionlist
Rule 3     functionlist -> empty
Rule 4     function -> FUNCTION ID ( argument ) { block RETURN boolean }
Rule 5     function -> FUNCTION ID ( argument ) { block RETURN }
Rule 6     argument -> ID , argument
Rule 7     argument -> ID
Rule 8     argument -> empty
Rule 9     empty -> <empty>
Rule 10    block -> statement block
Rule 11    block -> statement
Rule 12    statement -> declaration
Rule 13    statement -> initialization
Rule 14    statement -> assign
Rule 15    statement -> funcall
Rule 16    statement -> unary
Rule 17    statement -> while
Rule 18    statement -> for
Rule 19    statement -> if
Rule 20    statement -> print
Rule 21    declaration -> VARIABLE ID
Rule 22    initialization -> VARIABLE ID = STRING
Rule 23    initialization -> VARIABLE ID = boolean
Rule 24    assign -> ID = STRING
Rule 25    assign -> ID = boolean
Rule 26    assign -> ID = funcall
Rule 27    unary -> increment
Rule 28    unary -> decrement
Rule 29    increment -> ID INCRMNT
Rule 30    decrement -> ID DECRMNT
Rule 31    funcall -> ID ( argument )
Rule 32    if -> IF boolean { block } elif
Rule 33    elif -> ELSEIF boolean { block } elif
Rule 34    elif -> ELSE { block }
Rule 35    elif -> empty
Rule 36    while -> WHILE boolean { block }
Rule 37    for -> FOR ( initialization ; boolean ; assign ) { block }
Rule 38    for -> FOR ( initialization ; boolean ; unary ) { block }
Rule 39    for -> FOR ID IN RANGE ( expression , expression ) { block }
Rule 40    print -> PRINT ( plist )
Rule 41    plist -> pstat , plist
Rule 42    plist -> pstat
Rule 43    pstat -> STRING
Rule 44    pstat -> boolean
Rule 45    boolean -> boolean OR boolterm
Rule 46    boolean -> boolterm
Rule 47    boolterm -> boolterm AND boolterm1
Rule 48    boolterm -> boolterm1
Rule 49    boolterm1 -> NOT boolterm2
Rule 50    boolterm1 -> boolterm2
Rule 51    boolterm2 -> condition
Rule 52    boolterm2 -> expression
Rule 53    boolterm2 -> FALSE
Rule 54    boolterm2 -> TRUE
Rule 55    condition -> expression < expression
Rule 56    condition -> expression > expression
Rule 57    condition -> expression GTEQL expression
Rule 58    condition -> expression LTEQL expression
Rule 59    condition -> expression NOTEQL expression
Rule 60    condition -> expression BOOLEQL expression
Rule 61    expression -> expression + term
Rule 62    expression -> expression - term
Rule 63    expression -> term
Rule 64    term -> term * factor
Rule 65    term -> term / factor
Rule 66    term -> factor
Rule 67    factor -> ID
Rule 68    factor -> NUMBER
Rule 69    factor -> ( expression )

Terminals, with rules where they appear

(                    : 4 5 31 37 38 39 40 69
)                    : 4 5 31 37 38 39 40 69
*                    : 64
+                    : 61
,                    : 6 39 41
-                    : 62
/                    : 65
;                    : 37 37 38 38
<                    : 55
=                    : 22 23 24 25 26
>                    : 56
AND                  : 47
BOOLEQL              : 60
DECRMNT              : 30
ELSE                 : 34
ELSEIF               : 33
FALSE                : 53
FOR                  : 37 38 39
FUNCTION             : 4 5
GTEQL                : 57
ID                   : 4 5 6 7 21 22 23 24 25 26 29 30 31 39 67
IF                   : 32
IN                   : 39
INCRMNT              : 29
LTEQL                : 58
NOT                  : 49
NOTEQL               : 59
NUMBER               : 68
OR                   : 45
PRINT                : 40
RANGE                : 39
RETURN               : 4 5
STRING               : 22 24 43
TRUE                 : 54
VARIABLE             : 21 22 23
WHILE                : 36
error                : 
{                    : 4 5 32 33 34 36 37 38 39
}                    : 4 5 32 33 34 36 37 38 39

Nonterminals, with rules where they appear

argument             : 4 5 6 31
assign               : 14 37
block                : 1 4 5 10 32 33 34 36 37 38 39
boolean              : 4 23 25 32 33 36 37 38 44 45
boolterm             : 45 46 47
boolterm1            : 47 48
boolterm2            : 49 50
condition            : 51
declaration          : 12
decrement            : 28
elif                 : 32 33
empty                : 3 8 35
expression           : 39 39 52 55 55 56 56 57 57 58 58 59 59 60 60 61 62 69
factor               : 64 65 66
for                  : 18
funcall              : 15 26
function             : 2
functionlist         : 1 2
if                   : 19
increment            : 27
initialization       : 13 37 38
plist                : 40 41
print                : 20
program              : 0
pstat                : 41 42
statement            : 10 11
term                 : 61 62 63 64 65
unary                : 16 38
while                : 17

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . functionlist block
    (2) functionlist -> . function functionlist
    (3) functionlist -> . empty
    (4) function -> . FUNCTION ID ( argument ) { block RETURN boolean }
    (5) function -> . FUNCTION ID ( argument ) { block RETURN }
    (9) empty -> .

    FUNCTION        shift and go to state 5
    VARIABLE        reduce using rule 9 (empty -> .)
    ID              reduce using rule 9 (empty -> .)
    WHILE           reduce using rule 9 (empty -> .)
    FOR             reduce using rule 9 (empty -> .)
    IF              reduce using rule 9 (empty -> .)
    PRINT           reduce using rule 9 (empty -> .)

    program                        shift and go to state 1
    functionlist                   shift and go to state 2
    function                       shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> functionlist . block
    (10) block -> . statement block
    (11) block -> . statement
    (12) statement -> . declaration
    (13) statement -> . initialization
    (14) statement -> . assign
    (15) statement -> . funcall
    (16) statement -> . unary
    (17) statement -> . while
    (18) statement -> . for
    (19) statement -> . if
    (20) statement -> . print
    (21) declaration -> . VARIABLE ID
    (22) initialization -> . VARIABLE ID = STRING
    (23) initialization -> . VARIABLE ID = boolean
    (24) assign -> . ID = STRING
    (25) assign -> . ID = boolean
    (26) assign -> . ID = funcall
    (31) funcall -> . ID ( argument )
    (27) unary -> . increment
    (28) unary -> . decrement
    (36) while -> . WHILE boolean { block }
    (37) for -> . FOR ( initialization ; boolean ; assign ) { block }
    (38) for -> . FOR ( initialization ; boolean ; unary ) { block }
    (39) for -> . FOR ID IN RANGE ( expression , expression ) { block }
    (32) if -> . IF boolean { block } elif
    (40) print -> . PRINT ( plist )
    (29) increment -> . ID INCRMNT
    (30) decrement -> . ID DECRMNT

    VARIABLE        shift and go to state 17
    ID              shift and go to state 18
    WHILE           shift and go to state 21
    FOR             shift and go to state 22
    IF              shift and go to state 23
    PRINT           shift and go to state 24

    block                          shift and go to state 6
    statement                      shift and go to state 7
    declaration                    shift and go to state 8
    initialization                 shift and go to state 9
    assign                         shift and go to state 10
    funcall                        shift and go to state 11
    unary                          shift and go to state 12
    while                          shift and go to state 13
    for                            shift and go to state 14
    if                             shift and go to state 15
    print                          shift and go to state 16
    increment                      shift and go to state 19
    decrement                      shift and go to state 20

state 3

    (2) functionlist -> function . functionlist
    (2) functionlist -> . function functionlist
    (3) functionlist -> . empty
    (4) function -> . FUNCTION ID ( argument ) { block RETURN boolean }
    (5) function -> . FUNCTION ID ( argument ) { block RETURN }
    (9) empty -> .

    FUNCTION        shift and go to state 5
    VARIABLE        reduce using rule 9 (empty -> .)
    ID              reduce using rule 9 (empty -> .)
    WHILE           reduce using rule 9 (empty -> .)
    FOR             reduce using rule 9 (empty -> .)
    IF              reduce using rule 9 (empty -> .)
    PRINT           reduce using rule 9 (empty -> .)

    function                       shift and go to state 3
    functionlist                   shift and go to state 25
    empty                          shift and go to state 4

state 4

    (3) functionlist -> empty .

    VARIABLE        reduce using rule 3 (functionlist -> empty .)
    ID              reduce using rule 3 (functionlist -> empty .)
    WHILE           reduce using rule 3 (functionlist -> empty .)
    FOR             reduce using rule 3 (functionlist -> empty .)
    IF              reduce using rule 3 (functionlist -> empty .)
    PRINT           reduce using rule 3 (functionlist -> empty .)


state 5

    (4) function -> FUNCTION . ID ( argument ) { block RETURN boolean }
    (5) function -> FUNCTION . ID ( argument ) { block RETURN }

    ID              shift and go to state 26


state 6

    (1) program -> functionlist block .

    $end            reduce using rule 1 (program -> functionlist block .)


state 7

    (10) block -> statement . block
    (11) block -> statement .
    (10) block -> . statement block
    (11) block -> . statement
    (12) statement -> . declaration
    (13) statement -> . initialization
    (14) statement -> . assign
    (15) statement -> . funcall
    (16) statement -> . unary
    (17) statement -> . while
    (18) statement -> . for
    (19) statement -> . if
    (20) statement -> . print
    (21) declaration -> . VARIABLE ID
    (22) initialization -> . VARIABLE ID = STRING
    (23) initialization -> . VARIABLE ID = boolean
    (24) assign -> . ID = STRING
    (25) assign -> . ID = boolean
    (26) assign -> . ID = funcall
    (31) funcall -> . ID ( argument )
    (27) unary -> . increment
    (28) unary -> . decrement
    (36) while -> . WHILE boolean { block }
    (37) for -> . FOR ( initialization ; boolean ; assign ) { block }
    (38) for -> . FOR ( initialization ; boolean ; unary ) { block }
    (39) for -> . FOR ID IN RANGE ( expression , expression ) { block }
    (32) if -> . IF boolean { block } elif
    (40) print -> . PRINT ( plist )
    (29) increment -> . ID INCRMNT
    (30) decrement -> . ID DECRMNT

    $end            reduce using rule 11 (block -> statement .)
    }               reduce using rule 11 (block -> statement .)
    RETURN          reduce using rule 11 (block -> statement .)
    VARIABLE        shift and go to state 17
    ID              shift and go to state 18
    WHILE           shift and go to state 21
    FOR             shift and go to state 22
    IF              shift and go to state 23
    PRINT           shift and go to state 24

    statement                      shift and go to state 7
    block                          shift and go to state 27
    declaration                    shift and go to state 8
    initialization                 shift and go to state 9
    assign                         shift and go to state 10
    funcall                        shift and go to state 11
    unary                          shift and go to state 12
    while                          shift and go to state 13
    for                            shift and go to state 14
    if                             shift and go to state 15
    print                          shift and go to state 16
    increment                      shift and go to state 19
    decrement                      shift and go to state 20

state 8

    (12) statement -> declaration .

    VARIABLE        reduce using rule 12 (statement -> declaration .)
    ID              reduce using rule 12 (statement -> declaration .)
    WHILE           reduce using rule 12 (statement -> declaration .)
    FOR             reduce using rule 12 (statement -> declaration .)
    IF              reduce using rule 12 (statement -> declaration .)
    PRINT           reduce using rule 12 (statement -> declaration .)
    $end            reduce using rule 12 (statement -> declaration .)
    }               reduce using rule 12 (statement -> declaration .)
    RETURN          reduce using rule 12 (statement -> declaration .)


state 9

    (13) statement -> initialization .

    VARIABLE        reduce using rule 13 (statement -> initialization .)
    ID              reduce using rule 13 (statement -> initialization .)
    WHILE           reduce using rule 13 (statement -> initialization .)
    FOR             reduce using rule 13 (statement -> initialization .)
    IF              reduce using rule 13 (statement -> initialization .)
    PRINT           reduce using rule 13 (statement -> initialization .)
    $end            reduce using rule 13 (statement -> initialization .)
    }               reduce using rule 13 (statement -> initialization .)
    RETURN          reduce using rule 13 (statement -> initialization .)


state 10

    (14) statement -> assign .

    VARIABLE        reduce using rule 14 (statement -> assign .)
    ID              reduce using rule 14 (statement -> assign .)
    WHILE           reduce using rule 14 (statement -> assign .)
    FOR             reduce using rule 14 (statement -> assign .)
    IF              reduce using rule 14 (statement -> assign .)
    PRINT           reduce using rule 14 (statement -> assign .)
    $end            reduce using rule 14 (statement -> assign .)
    }               reduce using rule 14 (statement -> assign .)
    RETURN          reduce using rule 14 (statement -> assign .)


state 11

    (15) statement -> funcall .

    VARIABLE        reduce using rule 15 (statement -> funcall .)
    ID              reduce using rule 15 (statement -> funcall .)
    WHILE           reduce using rule 15 (statement -> funcall .)
    FOR             reduce using rule 15 (statement -> funcall .)
    IF              reduce using rule 15 (statement -> funcall .)
    PRINT           reduce using rule 15 (statement -> funcall .)
    $end            reduce using rule 15 (statement -> funcall .)
    }               reduce using rule 15 (statement -> funcall .)
    RETURN          reduce using rule 15 (statement -> funcall .)


state 12

    (16) statement -> unary .

    VARIABLE        reduce using rule 16 (statement -> unary .)
    ID              reduce using rule 16 (statement -> unary .)
    WHILE           reduce using rule 16 (statement -> unary .)
    FOR             reduce using rule 16 (statement -> unary .)
    IF              reduce using rule 16 (statement -> unary .)
    PRINT           reduce using rule 16 (statement -> unary .)
    $end            reduce using rule 16 (statement -> unary .)
    }               reduce using rule 16 (statement -> unary .)
    RETURN          reduce using rule 16 (statement -> unary .)


state 13

    (17) statement -> while .

    VARIABLE        reduce using rule 17 (statement -> while .)
    ID              reduce using rule 17 (statement -> while .)
    WHILE           reduce using rule 17 (statement -> while .)
    FOR             reduce using rule 17 (statement -> while .)
    IF              reduce using rule 17 (statement -> while .)
    PRINT           reduce using rule 17 (statement -> while .)
    $end            reduce using rule 17 (statement -> while .)
    }               reduce using rule 17 (statement -> while .)
    RETURN          reduce using rule 17 (statement -> while .)


state 14

    (18) statement -> for .

    VARIABLE        reduce using rule 18 (statement -> for .)
    ID              reduce using rule 18 (statement -> for .)
    WHILE           reduce using rule 18 (statement -> for .)
    FOR             reduce using rule 18 (statement -> for .)
    IF              reduce using rule 18 (statement -> for .)
    PRINT           reduce using rule 18 (statement -> for .)
    $end            reduce using rule 18 (statement -> for .)
    }               reduce using rule 18 (statement -> for .)
    RETURN          reduce using rule 18 (statement -> for .)


state 15

    (19) statement -> if .

    VARIABLE        reduce using rule 19 (statement -> if .)
    ID              reduce using rule 19 (statement -> if .)
    WHILE           reduce using rule 19 (statement -> if .)
    FOR             reduce using rule 19 (statement -> if .)
    IF              reduce using rule 19 (statement -> if .)
    PRINT           reduce using rule 19 (statement -> if .)
    $end            reduce using rule 19 (statement -> if .)
    }               reduce using rule 19 (statement -> if .)
    RETURN          reduce using rule 19 (statement -> if .)


state 16

    (20) statement -> print .

    VARIABLE        reduce using rule 20 (statement -> print .)
    ID              reduce using rule 20 (statement -> print .)
    WHILE           reduce using rule 20 (statement -> print .)
    FOR             reduce using rule 20 (statement -> print .)
    IF              reduce using rule 20 (statement -> print .)
    PRINT           reduce using rule 20 (statement -> print .)
    $end            reduce using rule 20 (statement -> print .)
    }               reduce using rule 20 (statement -> print .)
    RETURN          reduce using rule 20 (statement -> print .)


state 17

    (21) declaration -> VARIABLE . ID
    (22) initialization -> VARIABLE . ID = STRING
    (23) initialization -> VARIABLE . ID = boolean

    ID              shift and go to state 28


state 18

    (24) assign -> ID . = STRING
    (25) assign -> ID . = boolean
    (26) assign -> ID . = funcall
    (31) funcall -> ID . ( argument )
    (29) increment -> ID . INCRMNT
    (30) decrement -> ID . DECRMNT

    =               shift and go to state 29
    (               shift and go to state 30
    INCRMNT         shift and go to state 31
    DECRMNT         shift and go to state 32


state 19

    (27) unary -> increment .

    VARIABLE        reduce using rule 27 (unary -> increment .)
    ID              reduce using rule 27 (unary -> increment .)
    WHILE           reduce using rule 27 (unary -> increment .)
    FOR             reduce using rule 27 (unary -> increment .)
    IF              reduce using rule 27 (unary -> increment .)
    PRINT           reduce using rule 27 (unary -> increment .)
    $end            reduce using rule 27 (unary -> increment .)
    }               reduce using rule 27 (unary -> increment .)
    RETURN          reduce using rule 27 (unary -> increment .)
    )               reduce using rule 27 (unary -> increment .)


state 20

    (28) unary -> decrement .

    VARIABLE        reduce using rule 28 (unary -> decrement .)
    ID              reduce using rule 28 (unary -> decrement .)
    WHILE           reduce using rule 28 (unary -> decrement .)
    FOR             reduce using rule 28 (unary -> decrement .)
    IF              reduce using rule 28 (unary -> decrement .)
    PRINT           reduce using rule 28 (unary -> decrement .)
    $end            reduce using rule 28 (unary -> decrement .)
    }               reduce using rule 28 (unary -> decrement .)
    RETURN          reduce using rule 28 (unary -> decrement .)
    )               reduce using rule 28 (unary -> decrement .)


state 21

    (36) while -> WHILE . boolean { block }
    (45) boolean -> . boolean OR boolterm
    (46) boolean -> . boolterm
    (47) boolterm -> . boolterm AND boolterm1
    (48) boolterm -> . boolterm1
    (49) boolterm1 -> . NOT boolterm2
    (50) boolterm1 -> . boolterm2
    (51) boolterm2 -> . condition
    (52) boolterm2 -> . expression
    (53) boolterm2 -> . FALSE
    (54) boolterm2 -> . TRUE
    (55) condition -> . expression < expression
    (56) condition -> . expression > expression
    (57) condition -> . expression GTEQL expression
    (58) condition -> . expression LTEQL expression
    (59) condition -> . expression NOTEQL expression
    (60) condition -> . expression BOOLEQL expression
    (61) expression -> . expression + term
    (62) expression -> . expression - term
    (63) expression -> . term
    (64) term -> . term * factor
    (65) term -> . term / factor
    (66) term -> . factor
    (67) factor -> . ID
    (68) factor -> . NUMBER
    (69) factor -> . ( expression )

    NOT             shift and go to state 36
    FALSE           shift and go to state 40
    TRUE            shift and go to state 41
    ID              shift and go to state 44
    NUMBER          shift and go to state 45
    (               shift and go to state 46

    boolean                        shift and go to state 33
    boolterm                       shift and go to state 34
    boolterm1                      shift and go to state 35
    boolterm2                      shift and go to state 37
    condition                      shift and go to state 38
    expression                     shift and go to state 39
    term                           shift and go to state 42
    factor                         shift and go to state 43

state 22

    (37) for -> FOR . ( initialization ; boolean ; assign ) { block }
    (38) for -> FOR . ( initialization ; boolean ; unary ) { block }
    (39) for -> FOR . ID IN RANGE ( expression , expression ) { block }

    (               shift and go to state 47
    ID              shift and go to state 48


state 23

    (32) if -> IF . boolean { block } elif
    (45) boolean -> . boolean OR boolterm
    (46) boolean -> . boolterm
    (47) boolterm -> . boolterm AND boolterm1
    (48) boolterm -> . boolterm1
    (49) boolterm1 -> . NOT boolterm2
    (50) boolterm1 -> . boolterm2
    (51) boolterm2 -> . condition
    (52) boolterm2 -> . expression
    (53) boolterm2 -> . FALSE
    (54) boolterm2 -> . TRUE
    (55) condition -> . expression < expression
    (56) condition -> . expression > expression
    (57) condition -> . expression GTEQL expression
    (58) condition -> . expression LTEQL expression
    (59) condition -> . expression NOTEQL expression
    (60) condition -> . expression BOOLEQL expression
    (61) expression -> . expression + term
    (62) expression -> . expression - term
    (63) expression -> . term
    (64) term -> . term * factor
    (65) term -> . term / factor
    (66) term -> . factor
    (67) factor -> . ID
    (68) factor -> . NUMBER
    (69) factor -> . ( expression )

    NOT             shift and go to state 36
    FALSE           shift and go to state 40
    TRUE            shift and go to state 41
    ID              shift and go to state 44
    NUMBER          shift and go to state 45
    (               shift and go to state 46

    boolean                        shift and go to state 49
    boolterm                       shift and go to state 34
    boolterm1                      shift and go to state 35
    boolterm2                      shift and go to state 37
    condition                      shift and go to state 38
    expression                     shift and go to state 39
    term                           shift and go to state 42
    factor                         shift and go to state 43

state 24

    (40) print -> PRINT . ( plist )

    (               shift and go to state 50


state 25

    (2) functionlist -> function functionlist .

    VARIABLE        reduce using rule 2 (functionlist -> function functionlist .)
    ID              reduce using rule 2 (functionlist -> function functionlist .)
    WHILE           reduce using rule 2 (functionlist -> function functionlist .)
    FOR             reduce using rule 2 (functionlist -> function functionlist .)
    IF              reduce using rule 2 (functionlist -> function functionlist .)
    PRINT           reduce using rule 2 (functionlist -> function functionlist .)


state 26

    (4) function -> FUNCTION ID . ( argument ) { block RETURN boolean }
    (5) function -> FUNCTION ID . ( argument ) { block RETURN }

    (               shift and go to state 51


state 27

    (10) block -> statement block .

    $end            reduce using rule 10 (block -> statement block .)
    }               reduce using rule 10 (block -> statement block .)
    RETURN          reduce using rule 10 (block -> statement block .)


state 28

    (21) declaration -> VARIABLE ID .
    (22) initialization -> VARIABLE ID . = STRING
    (23) initialization -> VARIABLE ID . = boolean

    VARIABLE        reduce using rule 21 (declaration -> VARIABLE ID .)
    ID              reduce using rule 21 (declaration -> VARIABLE ID .)
    WHILE           reduce using rule 21 (declaration -> VARIABLE ID .)
    FOR             reduce using rule 21 (declaration -> VARIABLE ID .)
    IF              reduce using rule 21 (declaration -> VARIABLE ID .)
    PRINT           reduce using rule 21 (declaration -> VARIABLE ID .)
    $end            reduce using rule 21 (declaration -> VARIABLE ID .)
    }               reduce using rule 21 (declaration -> VARIABLE ID .)
    RETURN          reduce using rule 21 (declaration -> VARIABLE ID .)
    =               shift and go to state 52


state 29

    (24) assign -> ID = . STRING
    (25) assign -> ID = . boolean
    (26) assign -> ID = . funcall
    (45) boolean -> . boolean OR boolterm
    (46) boolean -> . boolterm
    (31) funcall -> . ID ( argument )
    (47) boolterm -> . boolterm AND boolterm1
    (48) boolterm -> . boolterm1
    (49) boolterm1 -> . NOT boolterm2
    (50) boolterm1 -> . boolterm2
    (51) boolterm2 -> . condition
    (52) boolterm2 -> . expression
    (53) boolterm2 -> . FALSE
    (54) boolterm2 -> . TRUE
    (55) condition -> . expression < expression
    (56) condition -> . expression > expression
    (57) condition -> . expression GTEQL expression
    (58) condition -> . expression LTEQL expression
    (59) condition -> . expression NOTEQL expression
    (60) condition -> . expression BOOLEQL expression
    (61) expression -> . expression + term
    (62) expression -> . expression - term
    (63) expression -> . term
    (64) term -> . term * factor
    (65) term -> . term / factor
    (66) term -> . factor
    (67) factor -> . ID
    (68) factor -> . NUMBER
    (69) factor -> . ( expression )

    STRING          shift and go to state 54
    ID              shift and go to state 53
    NOT             shift and go to state 36
    FALSE           shift and go to state 40
    TRUE            shift and go to state 41
    NUMBER          shift and go to state 45
    (               shift and go to state 46

    boolean                        shift and go to state 55
    funcall                        shift and go to state 56
    boolterm                       shift and go to state 34
    boolterm1                      shift and go to state 35
    boolterm2                      shift and go to state 37
    condition                      shift and go to state 38
    expression                     shift and go to state 39
    term                           shift and go to state 42
    factor                         shift and go to state 43

state 30

    (31) funcall -> ID ( . argument )
    (6) argument -> . ID , argument
    (7) argument -> . ID
    (8) argument -> . empty
    (9) empty -> .

    ID              shift and go to state 57
    )               reduce using rule 9 (empty -> .)

    argument                       shift and go to state 58
    empty                          shift and go to state 59

state 31

    (29) increment -> ID INCRMNT .

    VARIABLE        reduce using rule 29 (increment -> ID INCRMNT .)
    ID              reduce using rule 29 (increment -> ID INCRMNT .)
    WHILE           reduce using rule 29 (increment -> ID INCRMNT .)
    FOR             reduce using rule 29 (increment -> ID INCRMNT .)
    IF              reduce using rule 29 (increment -> ID INCRMNT .)
    PRINT           reduce using rule 29 (increment -> ID INCRMNT .)
    $end            reduce using rule 29 (increment -> ID INCRMNT .)
    }               reduce using rule 29 (increment -> ID INCRMNT .)
    RETURN          reduce using rule 29 (increment -> ID INCRMNT .)
    )               reduce using rule 29 (increment -> ID INCRMNT .)


state 32

    (30) decrement -> ID DECRMNT .
